@@ -1,3 +1,13 @@
+2008-01-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am:
+	* keyboard-bell.png:
+	* keyboard-cursor.png:
+	* keyboard-repeat.png:
+	* keyboard-volume.png: remove obsolete icons
+	* gnome-keyboard-properties.c: (setup_dialog): don't initialize
+	our custom stock icons since we don't use them any longer
+
 2008-01-16  Denis Washington  <denisw@svn.gnome.org>
 
 	* gnome-keyboard-properties.glade:
