@@ -1,5 +1,11 @@
 2008-01-25  Jens Granseuer  <jensgr@gmx.net>
 
+	* Makefile.am:
+	* mouse-left.png:
+	* mouse-right.png: remove obsolete icons
+
+2008-01-25  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-mouse-properties.c: (delay_value_changed_cb), (setup_dialog):
 	remove left-over callback that was causing the capplet to set a label
 	on a NULL widget (bug #510425)
