@@ -1,3 +1,8 @@
+2008-01-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* capplet-stock-icons.c: (capplet_init_stock_icons): remove code
+	for obsolete "stock" icons
+
 2007-12-21  Luca Ferretti  <elle.uca@libero.it>
 
 	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
